--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "sillytavern-to-sharegpt",
   "version": "1.0.0",
-  "main": "index.ts",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node index.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "typescript": "^5.4.5"
+    "@faker-js/faker": "^8.0.2",
+    "@types/node": "^20.3.1",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@types/node": "^20.12.12"
-  },
-  "description": ""
+    "ts-node": "^10.9.2"
+  }
 }
